--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ url:
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "https://sudarme.github.io/"
+baseurl: "https://sudarcode.github.io/"
 
 #
 # !! You don't need to change any of the configuration flags below !!
